_sass/hero.scss
body {
  background-image: url("/img/hero.jpg");
  background-position: center center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
}

.hero_section {
  height: calc(100vh - 50px);
  width: 100%;
  display: table;
  background-color: rgba(0, 0, 0, 0.3);

  .sub-header {
    font-size: $large-font-size;
  }

  .hero_title {
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    display: table-cell;
    vertical-align: middle;

    .hero_text {
      color: $font_white;
      font-weight: 300;

    }
  }
}

